# D.Smile

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/cpp/core/: common.h  ppu.cpp  ppu.h  spg200.cpp  spg200.h  spu.cpp  spu.h  state.h  unsp.cpp  unsp.h  vsmile.cpp  vsmile.h
app/src/main/java/com/dsmile/emulator/emu/: GameRenderer.kt  NativeCore.kt
app/src/main/java/com/dsmile/emulator/input/: InputMapper.kt
app/src/main/java/com/dsmile/emulator/ui/: EmuActivity.kt  MainActivity.kt  TouchOverlayView.kt
app/src/main/res/drawable/: ic_launcher_fg.xml
app/src/main/res/values/: colors.xml  themes.xml
docs/: compatibility-mame.csv  iisu-integration.md
docs/research/: mame.md  vdream-android.md  veesem.md  vfrown.md
test/: accurate_test.cpp  host_test.cpp  screenshot.cpp  veesem_test.cpp
